--- a/cajas/style.css
+++ b/cajas/style.css
@@ -1,25 +1,32 @@
-body {
-    background-color: #Fafafa;
-    border: 4px solid red;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.section {
+    width: 100vw;
+    height: 100vh;
+}
+
+.main {
+    width: 100vw;
     height: 100vh;
     position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.caja-1,
-.caja-2,
-.caja-3 {
-    display: inline-block;
-    background-color: crimson;
-    padding: 10px;
-    margin: 25px;
-    width: 250px;
-    height: 250px;
-    box-sizing: border-box;
-}
-
-.caja-2 {
+.rick-image {
     position: absolute;
+    z-index: -100;
+    width: 100%;
+    height: 100%;
+}
+
+.section-1 {
+    background-color: aqua;
+}
+
+.section-2 {
+    background-color: pink;
+}
+
+.section-3 {
+    background-color: purple;
 }
